# bluey

./: .gitignore  Cargo.toml  flake.nix
src/: logic.rs  main.rs  ui.rs
